--- a/frontend/src/Components/Form/Form.scss
+++ b/frontend/src/Components/Form/Form.scss
@@ -33,3 +33,18 @@
     background-color: #00bc77;
     color: #fff;
 }
+
+//style affichage connexion réussi ou non
+
+.userconnection {
+    background-color: #00bc77;
+    padding: 5px;
+    color: #FFF;
+    font-weight: 500;
+    font-size: 1.1em;
+}
+
+.errorMessage {
+    background-color: rgb(212, 33, 33);
+    border-color: rgb(212, 33, 33);
+}
