--- a/frontend/src/Components/EditUsername/EditUsername.scss
+++ b/frontend/src/Components/EditUsername/EditUsername.scss
@@ -19,6 +19,7 @@
 .form-content {
     max-width: 300px;
     margin: auto;
+    margin-top: 20px;
     margin-bottom: 2rem;
     background-color: #FFF;
     box-sizing: border-box;
@@ -41,6 +42,10 @@
 
             @media (min-width:768px) {
                 width: 110px;
+            }
+
+            &:read-only {
+                background-color: #ececec;
             }
         }
 
